[project]
name = "yae-ai-editor"
version = "0.1.0"
description = "YAE (Young AI Editor) - 10代向けメディア記事作成支援AI編集者アプリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
